--- a/about.html
+++ b/about.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta charset="utf-8">
 	<title>about</title>
 	<link rel="stylesheet" href="style.css"> 
@@ -31,7 +32,7 @@
 	</div>
 	
 	<div class="p">
-		<div style="background-image: url("img/beepp 2.png");">
+		
 		<p style="text-align:center"> Alexandria Habiby, known as Lexie, is a part-time petite commercial model for Colours Agency in Glasgow.  
 		</p>
 		
@@ -46,8 +47,9 @@
 		
 		<p style="text-align:center">Also a medical student at Aberdeen University, Alexandria spends her free time hanging out with friends and enjoys going to the beach and travelling.
 		</p>
+	
 	</div>
-		</div>
+		
 	<footer class="footer">
 		<p>© Alexandria Habiby, Aberdeen, Scotland </p>
 	</footer>
