--- a/portfolio.html
+++ b/portfolio.html
@@ -1,7 +1,9 @@
 <!doctype html>
 <html>
 <head>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta charset="utf-8">
+	<meta name="keywords" content="HTML, CSS, JavaScript">
 	<title>portfolio</title>
 	<link rel="stylesheet" href="style.css"> 
 	<link rel="preconnect" href="https://fonts.gstatic.com">
@@ -28,7 +30,7 @@
 		<a href="https://www.facebook.com/lexhaaaa" class="fa fa-facebook"></a>
 	</div>
 	
-	<div class="folio">
+	<div class="photo">
 		<div class="col">
 			<img class="port1" src="img/boop 5.png">
 		</div>
@@ -52,8 +54,9 @@
 		<div class="col">
 			<img class="port1" src="img/boop 9.png">
 		</div>
-	
 		
+	
+	</div>
 		
 	<footer class="footer">
 		<p>© Alexandria Habiby, Aberdeen, Scotland </p>
@@ -62,7 +65,7 @@
 	
 	
 	
-	</div>
+	
 
 
 	
